@@ -1,3 +1,7 @@
+2003-11-22  Wakaba  <wakaba@suika.fam.cx>
+
+	* QName.pm (generate_prefix): Ignore implicit xmlns="" declaration.
+
 2003-11-09  Wakaba  <wakaba@suika.fam.cx>
 
 	* Node.pm (%NS): Removed.
